[package]
name = "qs-lite"
version = "0.1.1"
edition = "2021"
authors = ["Ege BALCI <egebalci@pm.me>"]
description = "QSocket liteweight beacon."
repository = "https://github.com/qsocket/qs-lite"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.61"
colored = "2.0.0"
rand = "0.8.5"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
nix = "0.25.0"
hex = "0.4.3"
log = "0.4.20"
qr2term = "0.3.1"
spinoff = "0.8.0"
chrono = "0.4.30"
clap = { version = "4.4.4", features = ["derive"] }
crossterm = "0.27.0"
thiserror = "1.0.49"
ctrlc = "3.4.1"

[dependencies.qsocket]
path = "../../libs/qsocket-rs"

[target.'cfg(not(target_os = "windows"))'.dependencies]
termion = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
conpty = "0.5.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
