[package]
name = "qs-lite"
edition = "2021"
version = "0.1.1"
authors = ["Ege BALCI <egebalci@pm.me>"]
description = "QSocket liteweight beacon."
license = "MIT"
repository = "https://github.com/qsocket/qs-lite"

[dependencies]
anyhow = "1.0.61"
colored = "2.0.0"
ctrlc = "3.4.1"
hex = "0.4.3"
log = "0.4.20"
nix = "0.25.0"
qr2term = "0.3.1"
rand = "0.8.5"
spinoff = "0.8.0"
thiserror = "1.0.49"
chrono = "0.4.30"
# qsocket = "*"

[dependencies.clap]
version = "4.4.4"
features = ["help", "color", "derive", "error-context", "std", "suggestions"]
default-features = false

[dependencies.crossterm]
version = "0.27.0"
features = ["events", "windows"]
default-features = false

[dependencies.qsocket]
path = "../../libs/qsocket-rs"
features = []

[dependencies.rustls]
version = "0.20.6"
features = ["dangerous_configuration"]


[target."cfg(not(target_os = \"windows\"))".dependencies]
termion = "2.0.1"

[target."cfg(target_os = \"windows\")".dependencies]
conpty = "0.5.1"
[dependencies.windows]
version = "0.51.1"
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_SystemServices",
  "Win32_System_IO",
  "Win32_Storage_FileSystem"
]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

